[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/PaperFloor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Rock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Rock.gd" type="Script" id=3]
[ext_resource path="res://Objects/PaperBoss.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/PaperBoss.gd" type="Script" id=5]
[ext_resource path="res://Scenes/PaperMiniGame.gd" type="Script" id=6]
[ext_resource path="res://Objects/PaperMob.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objects/PaperMobs.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.5, 300.5 )

[node name="PaperMiniGame" type="Node2D"]
script = ExtResource( 6 )

[node name="Floor" parent="." instance=ExtResource( 1 )]
position = Vector2( 510, 315 )

[node name="WallLeft" type="StaticBody2D" parent="."]
position = Vector2( -79, 216 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2( 42.5, 83.5 )
shape = SubResource( 1 )

[node name="WallRight" type="StaticBody2D" parent="."]
position = Vector2( -79, 216 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2( 1158, 83 )
shape = SubResource( 1 )

[node name="Rock" parent="." instance=ExtResource( 2 )]
position = Vector2( 522, 461 )
script = ExtResource( 3 )

[node name="PaperBoss" parent="." instance=ExtResource( 4 )]
position = Vector2( 514, -1 )
script = ExtResource( 5 )

[node name="PaperMobs" type="Node" parent="."]
script = ExtResource( 8 )
papermob_scene = ExtResource( 7 )

[node name="SpawnCooldownTimer" type="Timer" parent="PaperMobs"]
wait_time = 0.5

[connection signal="body_entered" from="Floor" to="PaperMobs" method="_on_Floor_body_entered"]
[connection signal="timeout" from="PaperMobs/SpawnCooldownTimer" to="PaperMobs" method="_on_SpawnCooldownTimer_timeout"]
